--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8000
+MONGODB_URI=mongodb+srv://chibienayme:UCPC3bbpkpuoROqt@cluster0.pg9q2.mongodb.net/CRM?retryWrites=true&w=majority
+API_KEY=abc
