--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-  "start": "node index.js",
+  "name": "CRM",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
